--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
-    "test:ci": "ng e2e"
+    "test:ci": "ng e2e",
+    "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{ts,css,html}\""
+  },
+  "husky": {   
+    "hooks": {  
+       "pre-commit": "npm run prettier:check"        
+     }   
   },
   "private": true,
   "dependencies": {
@@ -32,9 +38,12 @@
     "@testing-library/angular": "^11.0.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
+    "husky": "^7.0.4",
     "jasmine-core": "~4.0.0",
     "jest": "^27.5.1",
     "jest-preset-angular": "^11.1.1",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "~4.5.2"
   }
