--- a/package.json
+++ b/package.json
@@ -1,50 +1,52 @@
 {
-  "name": "jokenpo",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "jest",
-    "test:ci": "ng e2e",
-    "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{ts,css,html}\""
-  },
-  "husky": {   
-    "hooks": {  
-       "pre-commit": "npm run prettier:check"        
-     }   
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/cdk": "^13.2.4",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.2.4",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.5",
-    "@angular/cli": "~13.2.5",
-    "@angular/compiler-cli": "~13.2.0",
-    "@testing-library/angular": "^11.0.3",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^12.11.1",
-    "husky": "^7.0.4",
-    "jasmine-core": "~4.0.0",
-    "jest": "^27.5.1",
-    "jest-preset-angular": "^11.1.1",
-    "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "typescript": "~4.5.2"
-  }
+    "name": "jokenpo",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "jest",
+        "test:ci": "ng e2e",
+        "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{ts,css,html}\"",
+        "prettier:apply": "prettier --config .prettierrc --write \"src/**/*.{ts,css,html}\"",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "src/**/*.{ts,css,html}": [
+            "npm run prettier:check"
+        ]
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~13.2.0",
+        "@angular/cdk": "^13.2.4",
+        "@angular/common": "~13.2.0",
+        "@angular/compiler": "~13.2.0",
+        "@angular/core": "~13.2.0",
+        "@angular/forms": "~13.2.0",
+        "@angular/material": "^13.2.4",
+        "@angular/platform-browser": "~13.2.0",
+        "@angular/platform-browser-dynamic": "~13.2.0",
+        "@angular/router": "~13.2.0",
+        "rxjs": "~7.5.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~13.2.5",
+        "@angular/cli": "~13.2.5",
+        "@angular/compiler-cli": "~13.2.0",
+        "@testing-library/angular": "^11.0.3",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^12.11.1",
+        "husky": "^7.0.4",
+        "jasmine-core": "~4.0.0",
+        "jest": "^27.5.1",
+        "jest-preset-angular": "^11.1.1",
+        "lint-staged": "^12.3.4",
+        "prettier": "^2.5.1",
+        "ts-jest": "^27.1.3",
+        "typescript": "~4.5.2"
+    }
 }
