--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
-    "test:ci": "ng e2e",
+    "test:watch": "npm run test -- --watch",
+    "test:e2e": "ng e2e",
     "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{ts,css,html}\"",
     "prettier:apply": "prettier --config .prettierrc --write \"src/**/*.{ts,css,html}\"",
     "prepare": "husky install",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "lint:fix": "npm run lint -- --fix"
   },
   "lint-staged": {
     "src/**/*.{ts,css,html}": [
