--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-angular": "^16.2.1",
     "@testing-library/angular": "^11.0.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
