docs: add compodoc

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "prettier:apply": "prettier --config .prettierrc --write \"src/**/*.{ts,css,html}\"",
     "prepare": "husky install",
     "lint": "ng lint",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "compodoc:build": "compodoc -p tsconfig.doc.json",
+    "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
+    "compodoc:serve": "compodoc -s"
   },
   "lint-staged": {
     "src/**/*.{ts,css,html}": [
@@ -33,6 +36,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@commitlint/config-conventional": "^16.2.1",
+    "@compodoc/compodoc": "^1.1.19",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
