--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lint:fix": "npm run lint -- --fix",
     "compodoc:build": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
-    "compodoc:serve": "compodoc -s"
+    "compodoc:serve": "compodoc -s",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "lint-staged": {
     "src/**/*.{ts,css,html}": [
@@ -52,6 +55,7 @@
     "@angular/compiler-cli": "~13.2.0",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-angular": "^16.2.1",
+    "@cypress/schematic": "^1.6.0",
     "@testing-library/angular": "^11.0.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
@@ -65,6 +69,7 @@
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "cypress": "latest"
   }
 }
