--- a/.github/workflows/build-actions.yml
+++ b/.github/workflows/build-actions.yml
@@ -6,13 +6,11 @@ on:
   pull_request:
     branches: [main]
 
-
 env:
-  NODE_VERSION: '16'
+  NODE_VERSION: "16"
   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
   NETLIFY_DEPLOY_TO_PROD: true
-
 
 jobs:
   inspections:
@@ -21,7 +19,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        inspection_command: ['lint', 'prettier:check', 'test', 'build']
+        inspection_command: ["lint", "prettier:check", "test", "build"]
 
     steps:
       - name: Checkout
@@ -50,6 +48,13 @@ jobs:
       - name: Run inspection
         run: npm run ${{ matrix.inspection_command }}
 
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
+          retention-days: 5
+
   deploy_netlify:
     name: Deploy to Netlify
     runs-on: ubuntu-latest
@@ -57,5 +62,11 @@ jobs:
     needs: [inspections]
 
     steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+
       - name: Deploy project into Netlify
         run: netlify deploy --prod
