--- a/.github/workflows/build-actions.yml
+++ b/.github/workflows/build-actions.yml
@@ -8,9 +8,6 @@ on:
 
 env:
   NODE_VERSION: "16"
-  NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-  NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-  NETLIFY_DEPLOY_TO_PROD: true
 
 jobs:
   inspections:
@@ -48,6 +45,35 @@ jobs:
       - name: Run inspection
         run: npm run ${{ matrix.inspection_command }}
 
+  build:
+    name: Build project and compodoc
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          check-latest: true
+
+      - name: Cache dependencies
+        id: cache_dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.npm
+            **/node_modules
+
+          key: ${{ runner.os }}-npm-modules-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install dependencies
+        if: steps.cache_dependencies.outputs.cache-hit != 'true'
+        run: npm ci
+
       - name: Run build
         run: npm run build
 
@@ -58,11 +84,21 @@ jobs:
           path: dist
           retention-days: 5
 
+      - name: Run compodoc
+        run: npm run compodoc:build
+
+      - name: Archive compodoc artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: documentation
+          path: documentation
+          retention-days: 5
+
   deploy_netlify:
     name: Deploy to Netlify
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    needs: [inspections]
+    needs: [inspections, build]
 
     steps:
       - name: Download build artifacts
@@ -72,4 +108,28 @@ jobs:
           path: dist
 
       - name: Deploy project into Netlify
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_DEPLOY_TO_PROD: true
+        run: netlify deploy --prod
+
+  deploy_compodoc:
+    name: Deploy to Compodoc to Netlify
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs: [inspections, build]
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: documentation
+          path: documentation
+
+      - name: Deploy project into Netlify
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_COMPODOC_SITE_ID }}
+          NETLIFY_DEPLOY_TO_PROD: true
         run: netlify deploy --prod
