--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
+    "cypress": "latest",
     "eslint": "^8.2.0",
     "husky": "^7.0.4",
     "jasmine-core": "~4.0.0",
@@ -69,7 +70,6 @@
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
-    "typescript": "~4.5.2",
-    "cypress": "latest"
+    "typescript": "~4.5.2"
   }
 }
