--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,11 +6,13 @@
     "emitDecoratorMetadata": true,
     "module": "CommonJs",
     "types": [
-      "jest"
+      "jest",
+      "@testing-library/jest-dom"
     ]
   },
   "files": [
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "setup-jest.ts",
   ],
   "include": [
     "src/**/*.spec.ts",
